Added some styling to the homepage

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
 
         <section id="intro">
-            <img src="./images/headshot.jpg" alt="headshot" width = "25%">
+            <img src="./images/headshot.jpg" alt="headshot">
             <h1>Hey, I'm Justin Melore</h1>
             <p>
                 I'm a current Computer Science with Games student at the University of Utah. I've had experience with Object-Oriented Programming and have begun
