--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <a></a>
         </div>
         <p>Website created by Justin Melore</p>
+        <!-- <a href="https://www.svgbackgrounds.com/set/free-svg-backgrounds-and-patterns/">Free SVG Backgrounds and Patterns by SVGBackgrounds.com</a> -->
     </footer>
 </body>
 </html>
