--- a/index.html
+++ b/index.html
@@ -54,12 +54,15 @@
     <footer>
         <h1>Contact Me</h1>
         <div>
-            <a></a>
-            <a></a>
-            <a></a>
+            <a href="https://github.com/JustinMelore" target="_blank"><img src="./images/github-icon.svg" alt="Github"></a>
+            <a href="http://www.linkedin.com/in/justin-melore" target="_blank"><img src="./images/linkedin-icon.svg" alt="LinkedIn"></a>
+            <a href="mailto:melorejustin@gmail.com" target="_blank"><img src="./images/mail-icon.svg" alt="Email"></a>
+             <!-- <img src="./images/github-icon.svg" alt="Github"> -->
+             <!-- <img src="./images/linkedin-icon.svg" alt="LinkedIn"> -->
+            <!-- <img src="./images/mail-icon.svg" alt="Email"> -->
         </div>
         <p>Website created by Justin Melore</p>
-        <a href="https://www.svgbackgrounds.com/set/free-svg-backgrounds-and-patterns/">Free SVG Backgrounds and Patterns by SVGBackgrounds.com</a>
+        <a href="https://www.svgbackgrounds.com/set/free-svg-backgrounds-and-patterns/" target="_blank">Free SVG Backgrounds and Patterns by SVGBackgrounds.com</a>
     </footer>
 </body>
 </html>
