Added styling to the recent games section

--- a/index.html
+++ b/index.html
@@ -29,25 +29,29 @@
                 controls and movement. I'm always eager to find new ways to problems and make engaging gameplay mechanics, and I look forward to getting even
                 more projects out into the world!
             </p>
-            <a href="./Resume.pdf" target="_blank">View my Resume</a>
+            <a class="buttonLink" href="./Resume.pdf" target="_blank">View my Resume</a>
         </section>
 
         <section id="recentGames">
             <h1>Recent Games</h1>
 
-            <div>
-                <a></a>
-                <h3>In the Wake of Betrayal</h3>
-                <p>Top-down 2D action game where you defend your ship against waves of demons</p>
+            <div class="gameCardContainer"> 
+                <a href="" class="gameCard" alt="In the Wake of Betrayal Image">
+                    <img src="./images/wakeofbetrayallogo.png">
+                    <h3>In the Wake of Betrayal</h3>
+                    <p>Top-down 2D action game where you defend your ship against waves of demons</p>
+                </a>
+
+                <a href="" class="gameCard">
+                    <img src="./images/ourlightlogo.png" alt="Our Light Image">
+                    <h3>Our Light</h3>
+                    <p>Short isometric puzzle game where you share your light to overcome obstacles</p>
+                </a>
+
+
             </div>
 
-            <div>
-                <a></a>
-                <h3>Our Light</h3>
-                <p>Short isometric puzzle game where you share your light to overcome obstacles</p>
-            </div>
-
-            <a>View Full List of Games</a>
+            <a href="" class="buttonLink">View Full List of Games</a>
         </section>
     </main>
 
