Wrote HTMl for games list page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Justin Melore | Gameplay Programmer"/>
     <meta property="og:description" content="Welcome to my portfolio! Come check out some of the projects I've been working on."/>
 </head>
-<body>
+<body id="homepageBody">
     <nav>
         
     </nav>
@@ -51,7 +51,7 @@
 
             </div>
 
-            <a href="" class="buttonLink">View Full List of Games</a>
+            <a href="./games.html" class="buttonLink">View Full List of Games</a>
         </section>
     </main>
 
