Added additonal game card to games list page

--- a/games.html
+++ b/games.html
@@ -20,6 +20,12 @@
     <h1>List of Games</h1>
     <h2>This page will be updated once new projects are completed, so make sure to come by every once in a while to see the new games!</h3>
     <div class="gameCardContainer">
+        <a href="" class="gameCard" alt="Untitled Project">
+            <img src="./images/wipLogo.jpg">
+            <h3>Untitled Capstone Project</h3>
+            <p>A 2.5D action adventure game still in active development. Check back soon for updates!</p>
+        </a>
+        
         <a href="" class="gameCard" alt="In the Wake of Betrayal Image">
             <img src="./images/wakeofbetrayallogo.png">
             <h3>In the Wake of Betrayal</h3>
