--- a/ourlight.html
+++ b/ourlight.html
@@ -26,7 +26,7 @@
             <h1>Our Light</h1>
             <p>
                 Though the world may be darkened and corrupted by loneliness, a simple act of kindness can bring light to a gloomy world. As you face the challenges 
-                and puzzles of life, remember that kindness can be returned. Our light is a puzzle game that plays into the theme of sharing your light.
+                and puzzles of life, remember that kindness can be returned. Our Light is a puzzle game that plays into the theme of sharing your light.
             </p>
             <a href="https://zethtorm.itch.io/our-light" target="_blank" class="buttonLink">Play Game</a>   
         </section>
