Linked the Our Light page to the other web pages

--- a/games.html
+++ b/games.html
@@ -33,7 +33,7 @@
                 <p>Top-down 2D action game where you defend your ship against waves of demons</p>
             </a>
 
-            <a href="" class="gameCard">
+            <a href="./ourlight.html" class="gameCard">
                 <img src="./images/ourlightlogo.png" alt="Our Light Image">
                 <h3>Our Light</h3>
                 <p>Short isometric puzzle game where you share your light to overcome obstacles</p>
