--- a/games.html
+++ b/games.html
@@ -27,7 +27,7 @@
                 <p>A 2.5D action adventure game still in active development. Check back soon for updates!</p>
             </a>
         
-            <a href="" class="gameCard" alt="In the Wake of Betrayal Image">
+            <a href="./wakeofbetrayal.html" class="gameCard" alt="In the Wake of Betrayal Image">
                 <img src="./images/wakeofbetrayallogo.png">
                 <h3>In the Wake of Betrayal</h3>
                 <p>Top-down 2D action game where you defend your ship against waves of demons</p>
