--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h1>Recent Games</h1>
 
             <div class="gameCardContainer"> 
-                <a href="" class="gameCard" alt="In the Wake of Betrayal Image">
+                <a href="./wakeofbetrayal.html" class="gameCard" alt="In the Wake of Betrayal Image">
                     <img src="./images/wakeofbetrayallogo.png">
                     <h3>In the Wake of Betrayal</h3>
                     <p>Top-down 2D action game where you defend your ship against waves of demons</p>
