Added non-functioning navbar to all pages

--- a/games.html
+++ b/games.html
@@ -15,7 +15,13 @@
 </head>
 <body id="gamesBody">
     <nav>
-        
+        <a>Justin Melore</a>
+        <div>
+            <a>About</a>
+            <a>Games</a>
+            <a>Resume</a>
+            <a>Contact</a>
+        </div>
     </nav>
     <h1>List of Games</h1>
     <h2>This page will be updated once new projects are completed, so make sure to come by every once in a while to see the new games!</h3>
