--- a/wakeofbetrayal.html
+++ b/wakeofbetrayal.html
@@ -15,7 +15,13 @@
 </head>
 <body class="gamePage">
     <nav>
-        
+        <a>Justin Melore</a>
+        <div>
+            <a>About</a>
+            <a>Games</a>
+            <a>Resume</a>
+            <a>Contact</a>
+        </div>
     </nav>
 
     <main>
