--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 </head>
 <body id="homepageBody">
     <nav>
-        <a>Justin Melore</a>
+        <a href="./index.html">Justin Melore</a>
         <div>
-            <a>About</a>
-            <a>Games</a>
-            <a>Resume</a>
-            <a>Contact</a>
+            <a href="#intro">About</a>
+            <a href="./games.html">Games</a>
+            <a href="./Resume.pdf" target="_blank">Resume</a>
+            <a href="#contact">Contact</a>
         </div>
     </nav>
 
@@ -61,7 +61,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer id="contact">
         <h1>Contact Me</h1>
         <div>
             <a href="https://github.com/JustinMelore" target="_blank"><img src="./images/github-icon.svg" alt="Github"></a>
