--- a/wakeofbetrayal.html
+++ b/wakeofbetrayal.html
@@ -15,12 +15,12 @@
 </head>
 <body class="gamePage">
     <nav>
-        <a>Justin Melore</a>
+        <a href="./index.html">Justin Melore</a>
         <div>
-            <a>About</a>
-            <a>Games</a>
-            <a>Resume</a>
-            <a>Contact</a>
+            <a href="./index.html#intro">About</a>
+            <a href="./games.html">Games</a>
+            <a href="./Resume.pdf" target="_blank">Resume</a>
+            <a href="./index.html#contact">Contact</a>
         </div>
     </nav>
 
