Corrected grammatical error

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p>
                 I'm a current Computer Science with Games student at the University of Utah. I've had experience with Object-Oriented Programming and have begun
                 applying my programming knowledge in various in-engine projects. I specialize in gameplay programming and enjoy creating fun and responsive player
-                controls and movement. I'm always eager to find new ways to problems and make engaging gameplay mechanics, and I look forward to getting even
+                controls and movement. I'm always eager to find new ways to solve problems and make engaging gameplay mechanics, and I look forward to getting even
                 more projects out into the world!
             </p>
             <a class="buttonLink" href="./Resume.pdf" target="_blank">View my Resume</a>
